[project]
name = "find_champ"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mhso", email = "m_hooge@hotmail.com"},
]
dependencies = ["requests>=2.32.5", "opencv-python>=4.12.0.88"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
