[project]
name = "find_champ"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mhso", email = "m_hooge@hotmail.com"},
]
dependencies = ["requests>=2.32.5", "opencv-python-headless>=4.13.0.92", "beautifulsoup4>=4.14.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
